--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -30,7 +30,13 @@ jobs:
         with:
           path: ~/.cache/xml2rfc
           key: xml2rfc
-          restore-key: xml2rfc
+          restore-keys: xml2rfc
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.fontist
+          key: fontist-${{ runner.os }}
+          restore-keys: fontist-${{ runner.os }}
 
       - uses: actions-mn/setup@master
 
