Added collection entry into metanorma.yml

--- a/metanorma.yml
+++ b/metanorma.yml
@@ -3,3 +3,7 @@ metanorma:
   source:
     files:
       - sources/csa-dso/document.adoc
+
+  collection:
+    organization: "CSA"
+    name: "CSA documents in Metanorma"
